--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/breededShelter?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Fordtough6087
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57InnoDBDialect
 
